# iwtsr

./: .gitignore  Cargo.toml  README.md  build.rs
c_code/: f_hhh.c  nr.h
context/: DEPENDENCIES.md  IWT.md  IWT_DETAILED.md  MEX.md  SUFIT.md
context/hhh/: HHH.md  HHH_OPTIMIZATION.md  HHH_REWRITE.md  MOM.md  SBFIT.md
dataviz/: hyperparameter_sweep.py  price_calc.py  test_and_visualize.py  test_and_visualize_combined.py  visualize_johnson_fit.py  visualize_johnson_transform.py  visualize_vols.py
src/: calibration.rs  data_loader.rs  f_hhh.rs  lib.rs  main.rs  moments.rs  nodes.rs  pricing.rs  swaption_nodes.rs  synthetic.rs  vols_to_prices.rs
