[package]
name = "iwtsr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iwtsr"
path = "src/main.rs"

[lib]
name = "f_hhh"
path = "src/lib.rs"

[dependencies]
gauss-quad = "0.2"
implied-vol = "2.0"
ndarray = { version = "0.15", features = ["serde"] }
nlopt = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.17"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.1"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

